--- a/main.css
+++ b/main.css
@@ -203,7 +203,11 @@ h2,
 .mw-parser-output .collapse-mobile > .mw-collapsible-toggle, /* Unfoldable titles https://meta.wikimedia.org/wiki/Grants:Project/Rapid */
 .funds-timeline-content, /* Text like "Cycle 5" in boxes https://meta.wikimedia.org/wiki/Grants:Project/Rapid#Timeline */
 .wmf-department-info-title, /* Titles here https://meta.wikimedia.org/wiki/Grants:Project/Rapid#Timeline */
-cite /* Wikipedia quote */
+cite, /* Wikipedia quote */
+.wbmi-entityview-caption, /* Commons: "File information": "Captions" block */
+.mw-filepage-resolutioninfo, /* Commons: "Size of this preview:", "Other resolutions:" */
+.oo-ui-labelElement-label, /* Commons: "Structured data" */
+#mw-hidden-catlinks /* Commons: "Hidden categories" */
 {
 	color: #bbb !important;
 }
