CSS: description typo fix

--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ tr,
 .flaggedrevs-pending,
 .mw-parser-output .templatebox-usagesample, /* https://commons.wikimedia.org/wiki/Creator:Frank_Schulenburg */
 .mw-parser-output .templatebox-languagedependant, /* https://commons.wikimedia.org/wiki/Creator:Frank_Schulenburg */
-.sdms-quick-view__cta, /* Commons search: button "More Detals" */
+.sdms-quick-view__cta, /* Commons search: button "More Details" */
 .mwe-upwiz-file:hover .mwe-upwiz-visible-file /* Commons: step Upload: node hover of uploaded */
 {
 	background: #220 !important;
