--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ hr,
 .sister-projects-wmf, /* Commons main page: logo of Wikimedia */
 .sister-projects-family, /* Commons main page: text "Wikimedia Commons is part of the non-profit, multilingual, free-content Wikimedia family */
 .mwe-upwiz-thirdparty-fields:last-child /* "I confirm that this work does not include material restricted by copyright, such as logos, posters, album covers, etc" */
+/* .mwe-upwiz-ownwork-purpose /1* "This work provides knowledge, instructions, or information to others." that checked by my JS *1/ */
 {
     display: none !important;
 }
