CSS: add comment block for Stylus

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,3 +1,11 @@
+/* ==UserStyle==
+@name           Wikipedia and sister projects (Wikidata, Commons, Wikisource...): black, minimal
+@namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
+@version        1.0.0
+@description    Black, with removed elements that I do not need.
+@author         Vitaly Zdanevich
+==/UserStyle== */
+
 a,
 .vector-menu-dropdown .mw-list-item a,
 #xtools_result a
