CSS: @name shortify because of userstyles.world limit

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           Wikipedia and sister projects (Wikidata, Commons, Wikisource...): black, minimal
+@name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
 @version        1.0.0
 @description    Black, with removed elements that I do not need.
