--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -6,6 +6,11 @@
 @author         Vitaly Zdanevich
 ==/UserStyle== */
 
+@-moz-document domain("wikisource.org"),
+domain("wikimedia.org"),
+domain("wikipedia.org")
+{
+
 a,
 .vector-menu-dropdown .mw-list-item a,
 #xtools_result a
@@ -778,6 +783,8 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 ::selection {
     background-color: #292;
     color: #000;
+}
+
 }
 
 /* vim: set filetype=css: */
