Editing: hide tip about preview

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -384,8 +384,10 @@ div.vectorTabs ul li{
 	color: lightgray;
 }
 
-#siteSub {
-	display:none;
+#siteSub,
+#mw-usercssyoucanpreview
+{
+	display: none;
 }
 
 /* main font */
