--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.4
+@version        1.0.5
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -495,6 +495,11 @@ table,
 
 table.wikitable > tr > th, table.wikitable > * > tr > th {
 	background-color: gray;
+}
+
+span[style='background-color:yellow'] /* [крыніца?] /* https://be.wikipedia.org/wiki/Вікіпедыя:Спасылкі_на_крыніцы */
+{
+	background: #742 !important;
 }
 
 tr,
