--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -65,8 +65,8 @@ hr,
 .sister-projects-wmf, /* Commons main page: logo of Wikimedia */
 .sister-projects-family, /* Commons main page: text "Wikimedia Commons is part of the non-profit, multilingual, free-content Wikimedia family */
 .mwe-upwiz-thirdparty-fields:last-child, /* "I confirm that this work does not include material restricted by copyright, such as logos, posters, album covers, etc" */
-[src='//upload.wikimedia.org/wikipedia/commons/thumb/8/83/Blue-bg_rounded.svg/350px-Blue-bg_rounded.svg.png'], /* be.wikipedia.org main page */
-[src='//upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Yellow-bg_rounded.svg/350px-Yellow-bg_rounded.svg.png']
+[src$='Blue-bg_rounded.svg/350px-Blue-bg_rounded.svg.png'], /* be.wikipedia.org main page */
+[src$='Yellow-bg_rounded.svg/350px-Yellow-bg_rounded.svg.png'],
 .mw-newarticletext div[style*='background:#F8FFFF']:first-child /* Help text in Wiktionary edit screen */
 /* .mwe-upwiz-ownwork-purpose /1* "This work provides knowledge, instructions, or information to others." that checked by my JS *1/ */
 {
