--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.8
+@version        1.0.9
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -10,7 +10,8 @@
 @-moz-document domain("wikisource.org"),
 domain("wikimedia.org"),
 domain("wikipedia.org"),
-domain("wiktionary.org")
+domain("wiktionary.org"),
+domain("wikidata.org")
 {
 /* End of lines for removing, also remove "}" at the end of this file */
 
