--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.10
+@version        1.0.11
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -17,7 +17,8 @@ domain("wikidata.org")
 
 a,
 .vector-menu-dropdown .mw-list-item a,
-#xtools_result a
+#xtools_result a,
+.popup_mainlink a /* Gadget */
 {
 	color: #37d;
 }
@@ -249,7 +250,8 @@ cite, /* Wikipedia quote */
 #p-user-label, /* "User" button at the top: vertical line at the right */
 .sub, /* https://be.wikipedia.org/wiki/Галоўная_старонка -> Вікіпраекты */
 .oo-ui-fieldsetLayout-header, /* Preferences: subtitles of group of prefs */
-.oo-ui-fieldLayout-field /* Preferences: labels */
+.oo-ui-fieldLayout-field, /* Preferences: labels */
+.popupData /* Gadget */
 {
 	color: #bbb !important;
 }
@@ -317,7 +319,8 @@ kbd[style*='background:#EEEEEE'],
 
 .licensetpl_wrapper,
 .cdx-tabs:not(.cdx-tabs--framed) > .cdx-tabs__header, /* Commons search: top bar with buttons */
-.mw-message-box-warning /* Block with text "Remember that this is only a preview. Your changes have not yet been saved!" */
+.mw-message-box-warning, /* Block with text "Remember that this is only a preview. Your changes have not yet been saved!" */
+.navpopup /* Gadget */
 {
 	background: #222 !important;
 	border: 0 !important;
@@ -422,7 +425,9 @@ div.vectorTabs ul li{
 }
 
 /* main font */
-.mw-body-content {
+.mw-body-content,
+.popupPreview /* Gadget */
+{
 	font-size: 1.5em;
 }
 
