Media Viewer: fix font colors

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.14
+@version        1.0.15
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -436,7 +436,11 @@ table h3, /* https://be.wikisource.org/wiki/Галоўная_старонка */
 #mwdw, /* Popup in editing mode */
 .oo-ui-popupWidget-popup, /* Wikidata: popup with "Potential issue" */
 .oo-ui-widget .citation, /* Citation in reference edit popup */
-ol.references li:target /* Click to source[1] - highlight the source */
+ol.references li:target, /* Click to source[1] - highlight the source */
+.mw-mmv-source, /* Media Viewer: bottom panel with description */
+.mw-mmv-filename-prefix,
+.mw-mmv-filename,
+.mw-mmv-datetime
 { 
     color: #000 !important;
 }
