--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.15
+@version        1.0.16
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -252,7 +252,8 @@ cite, /* Wikipedia quote */
 .oo-ui-fieldsetLayout-header, /* Preferences: subtitles of group of prefs */
 .oo-ui-fieldLayout-field, /* Preferences: labels */
 .popupData, /* Gadget */
-.navpopup .reference-text .citation /* Gadget */
+.navpopup .reference-text .citation, /* Gadget */
+.popupPreview /* Gadget */
 {
 	color: #bbb !important;
 }
@@ -440,7 +441,8 @@ ol.references li:target, /* Click to source[1] - highlight the source */
 .mw-mmv-source, /* Media Viewer: bottom panel with description */
 .mw-mmv-filename-prefix,
 .mw-mmv-filename,
-.mw-mmv-datetime
+.mw-mmv-datetime,
+.popupPreview .popupDiff /* Gadget */
 { 
     color: #000 !important;
 }
